# Meta_Env

./: .dockerignore  .env.example  .gitignore  Dockerfile  GUIDE.txt  QUICK_REFERENCE.md  README.md  client.py  deploy-to-hf.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_submission.ps1  validate-submission.sh
app/: app.py
baseline/: baseline_agent.py  baseline_results.json  run_baseline.py
data/: easy_ads.json  hard_ads.json  medium_ads.json
evaluation/: llm_grader.py  metrics.py
meta_ads_env/: __init__.py  env.py  grader.py  models.py  reward.py  simulator.py  tasks.py  utils.py
server/: __init__.py  app.py
